# sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/formalingo/: __init__.py  formalingo_client.py  kiota-lock.json
src/formalingo/api/v1/: v1_request_builder.py
src/formalingo/api/v1/documents/: documents_get_response.py  documents_get_response_meta.py  documents_post_response.py  documents_request_builder.py  get_status_query_parameter_type.py
src/formalingo/api/v1/forms/: forms401_error.py  forms_get_response.py  forms_get_response_meta.py  forms_post_response.py  forms_request_builder.py  get_status_query_parameter_type.py
src/formalingo/models/: create_field_body.py  create_field_body_direction.py  create_field_body_options.py  create_field_body_type.py  create_form_body.py  create_question_body.py  create_question_body_priority.py  create_question_body_type.py  create_recipient_body.py  create_recipient_body_prefill.py  create_section_body.py  create_signer_role_body.py  create_submission_body.py  document.py  document_field.py  document_field_direction.py  document_field_options.py  document_field_type.py  document_page_dimensions.py  document_status.py  document_submission.py  document_submission_status.py  form.py  form_branding.py  form_settings.py  form_status.py  question.py  question_priority.py  question_type.py  recipient.py  recipient_response.py  recipient_status.py  section.py  signer.py  signer_input.py  signer_input_prefill.py  signer_response.py  signer_role.py  signer_status.py  submission_pdf.py  (+8 more)
(+68 files in other folders)
