[project]
name = "formalingo-sdk"
version = "0.1.0"
description = "Official Python SDK for the Formalingo API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "microsoft-kiota-bundle>=1.9.0",
]
keywords = ["formalingo", "forms", "api", "sdk", "digital-signatures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://formalingo.com/docs/sdks/python"
Repository = "https://github.com/formalingo/sdk-python"
Documentation = "https://formalingo.com/docs/sdks/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/formalingo"]
